<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LexDroidClaseInteraccion</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="jorge">Jorge</string>
	<string name="coloca_nombre">Coloca tu nombre</string>
    <string name="enviar_nombre">Enviar nombre</string>
    <string name="aviso_nombre_vacio">Por favor, introduce tu nombre</string>
    <string name="saludo">Saluda</string>
    <string name="hola_como_estas">¡Hola! ¿Cómo estás?</string>
	<string name="nuevo_texto">Nuevo Texto</string>
    <string name="segunda_actividad">Segunda Activity</string>
    <string name="nueva_activity">Nueva Activity</string>
	
</resources>
