<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    
    <TextView
        android:id="@+id/textView01"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida" />

    <TextView
        android:id="@+id/textView02"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jorge" />
    
    <EditText 
        android:id="@+id/editText01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coloca_nombre"
        />
    
    <Button 
        android:id="@+id/boton01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_nombre"
        />
    
    <Button 
        android:id="@+id/boton02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saludo"
        />
    
</LinearLayout>
